<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".support">

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/support"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="395dp"
        android:scaleType="fitXY"
        android:src="@drawable/image1" />

    <TextView
        android:id="@+id/contactDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_details"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_galagala_gmail_com"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_7904677091"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/questionsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frequently_asked_questions"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/question1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q_what_services_do_you_offer"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/answer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_we_offer_event_management_and_handling_services"
        android:layout_marginTop="5dp"/>



</LinearLayout>
